--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.26.1",
-    "connected-react-router": "^6.8.0",
+    "@reduxjs/toolkit": "^2.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.8.4",
+    "connected-react-router": "^6.9.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.1.0",
-    "react-redux": "^8.0.2",
-    "react-scripts": "^5.0.0",
-    "uuid": "^8.3.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-scripts": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start"
+  },
+  "resolutions": {
+    "axios": "^0.30.0",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31"
   },
   "eslintConfig": {
     "extends": "react-app"
